--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ html{
 }
 
 body{
-    font-family: 'Times New Roman', Times, serif;
     margin:0;
     padding: 0;
 }
@@ -22,6 +21,7 @@ body{
     width: 100%;
     background-color: white;
     height: 60px;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6);
 }
 
 .nav-left {
@@ -33,9 +33,8 @@ body{
 .nav-left h1 {
     margin: 0;
     font-weight: bold;
-    font-size: 1.2rem;
-    font-family: cursive;
-    font-style: italic;
+    font-size: 1.4rem;
+    font-family:'Montserrat', Helvetica, sans-serif ;
 }
 
 
@@ -228,28 +227,60 @@ input {
 
   .header-area h1,p,
   .middle-outer-div h1,p,
-  .middle-outer-div2 h1,p,
-  .
+  .middle-outer-div2 h1,p
    {
     animation: slideUp 0.8s ease-out;
   }
 
-.header-wrapper {
+  .header-container {
+    background-color: #F5EFE6;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    height: 90vh;
-    margin-top: -200px;
-    z-index: 1;
-    background-color: crimson;
-    position: relative;
-   
+    height: 100vh;
+    padding: 30px;
 }
 
-.header-area {
-    max-width: 600px;
+
+.header-wrapper {
+    background-image: url('assets/house\ \(2\).jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 97%;
+    height: 95%;
+    border-radius: 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
 }
+
+
+.header-area {
+    background: rgba(255, 255, 255, 0.4);
+    padding: 20px;
+    border-radius: 15px;
+    max-width: 600px;
+    text-align: center;
+    backdrop-filter: blur(8px);
+}
+
+.Get-started-btn {
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.Get-started-btn:hover {
+    background-color: gray;
+}
+
 
   .header-wrapper h1{
     margin-top: 150px;
@@ -263,10 +294,9 @@ input {
   }
 
   .header-wrapper p {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Montserrat', Helvetica, sans-serif;
     margin-top: 60px;
     font-size: 18px;
-    font-weight: 350;
     line-height: 1.5;
     color:black;
 }
@@ -282,7 +312,7 @@ input {
   color: black;
   cursor: pointer;
   display: inline-flex;
-  font-family:monospace;
+  font-family:'Montserrat', Helvetica, sans-serif;
   height: 40px;
   justify-content: center;
   line-height: 1;
@@ -470,15 +500,17 @@ input {
 .image-content img {
   max-width: 500px;
   height: auto;
-  border-radius: 10px;
+  border-radius: 8px;
+  padding-left: 80px;
+  
 }
 
 .outerdiv2-content1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  max-width: 1100px;
+  gap: 40px;
+  max-width: 1200px;
   margin: auto;
   flex-direction: row;
   margin-bottom: 80px;
@@ -492,7 +524,8 @@ input {
   width: 100%;
   max-width: 500px;
   height: auto;
-  border-radius: 10px;
+  border-radius: 8px;
+  padding-right: 100px;
 }
 
 .content-text1 {
